# baseball_cubans_news_generation

./: .gitignore  Dockerfile  README.md  classifier_lr_1.sav  config.ini  game_day_data_1.json  index.html  past_news.json  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
code/: base_algorithms_flow.py  c.json  config.ini  configuration.py  configuration_old.py  create_structured_data.py  cubans.json  first_algorithms_flow.py  game_day_data_1.json  game_players_details_new.py  games_details.json  index.html  past_news.json  past_news.py  stats_class.py  templates.json  utils.py  x.html
code/notice_generator/: __init__.py  base_class.py  player.py  stats_play.py  stats_player.py  utils.py
code/notice_pipeline/: __init__.py  base.py  cubans_players.py  date.py  generation.py  scrapper.py
code/notice_pipeline/notice_generator/: player.py  stats_play.py  stats_player.py  utils.py
code/past_news_pages/: new_26-7-2020.html  new_27-7-2020.html  new_28-7-2020.html
code/templates/: past_news_templates.html  principal_page_template.html
data/: past_news.json
past_news_pages/: new_28-7-2020.html
templates/: principal_page_template.html
